toolchain/parse/src/snapshots/knot_parse__statement__tests__expression.snap
---
source: toolchain/parse/src/statement.rs
expression: ast
---
Statement(
    Node(
        Expression(
            Expression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            1,
                        ),
                        Point(
                            1,
                            3,
                        ),
                    ),
                    (),
                ),
            ),
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                3,
            ),
        ),
        (),
    ),
)
