toolchain/parse/src/snapshots/knot_parse__statement__tests__variable.snap
---
source: toolchain/parse/src/statement.rs
expression: ast
---
Statement(
    Node(
        Variable(
            "foo",
            Expression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            11,
                        ),
                        Point(
                            1,
                            13,
                        ),
                    ),
                    (),
                ),
            ),
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                13,
            ),
        ),
        (),
    ),
)
